--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Todo List</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
         <div id="app" class="container my-3">
@@ -32,6 +32,6 @@
                   </div>
                 </div>
               </div>
-    <script src="/all.js"></script>
+    <script src="./all.js"></script>
 </body>
 </html>
